add tox, tests and a clever README.rst

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,10 +1,9 @@
 [buildout]
 develop = .
-parts = test casperjs
-
-[test]
-recipe = zc.recipe.testrunner
-eggs = gp.recipe.phantomjs [tests]
+parts = casperjs
 
 [casperjs]
 recipe = gp.recipe.phantomjs
+
+[tox]
+recipe = gp.recipe.tox
