--- a/tox.ini
+++ b/tox.ini
@@ -28,7 +28,7 @@ basepython=python3.2
 changedir={toxinidir}
 commands =
     rm -Rf .installed.cfg {envdir}/parts
-    python3.2 bootstrap-py3k.py buildout:parts-directory={envdir}/parts buildout:bin-directory={envbindir}
+    python3.2 -S bootstrap-py3k.py buildout:parts-directory={envdir}/parts buildout:bin-directory={envbindir}
     {envbindir}/buildout buildout:parts-directory={envdir}/parts buildout:bin-directory={envbindir}
     {envbindir}/nosetests
 deps =
@@ -39,9 +39,8 @@ basepython=python3.3
 changedir={toxinidir}
 commands =
     rm -Rf .installed.cfg {envdir}/parts
-    python3.2 bootstrap-py3k.py buildout:parts-directory={envdir}/parts buildout:bin-directory={envbindir}
+    python3.3 -S bootstrap-py3k.py buildout:parts-directory={envdir}/parts buildout:bin-directory={envbindir}
     {envbindir}/buildout buildout:parts-directory={envdir}/parts buildout:bin-directory={envbindir}
     {envbindir}/nosetests
 deps =
-    hexagonit.recipe.download
     nose
