use package version to get phantomjs

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=py26,py27
+envlist=py26,py27,py33
 
 [testenv:py26]
 basepython=python2.6
@@ -23,24 +23,13 @@ deps =
     zc.buildout
     nose
 
-[testenv:py32]
-basepython=python3.2
-changedir={toxinidir}
-commands =
-    rm -Rf .installed.cfg {envdir}/parts
-    python3.2 -S bootstrap-py3k.py buildout:parts-directory={envdir}/parts buildout:bin-directory={envbindir}
-    {envbindir}/buildout buildout:parts-directory={envdir}/parts buildout:bin-directory={envbindir}
-    {envbindir}/nosetests
-deps =
-    nose
-
 [testenv:py33]
 basepython=python3.3
 changedir={toxinidir}
 commands =
     rm -Rf .installed.cfg {envdir}/parts
-    python3.3 -S bootstrap-py3k.py buildout:parts-directory={envdir}/parts buildout:bin-directory={envbindir}
     {envbindir}/buildout buildout:parts-directory={envdir}/parts buildout:bin-directory={envbindir}
     {envbindir}/nosetests
 deps =
+    zc.buildout
     nose
