--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,9 +1,14 @@
 [buildout]
 develop = .
-parts = casperjs
+parts = casperjs python
 
 [casperjs]
 recipe = gp.recipe.phantomjs
 
 [tox]
 recipe = gp.recipe.tox
+
+[python]
+recipe = zc.recipe.egg
+interpreter = python
+eggs = gp.recipe.phantomjs
