adding parameterizable url

--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ commands =
 deps =
     zc.buildout
     nose
+    mock
 
 [testenv:py27]
 basepython=python2.7
@@ -22,6 +23,7 @@ commands =
 deps =
     zc.buildout
     nose
+    mock
 
 [testenv:py33]
 basepython=python3.3
@@ -33,3 +35,4 @@ commands =
 deps =
     zc.buildout
     nose
+    mock
