try to fix tests

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -3,14 +3,10 @@ develop = .
 parts = casperjs python
 
 [casperjs]
-recipe = gp.recipe.phantomjs
-
-[tox]
-recipe = gp.recipe.tox
+recipe = gp.recipe.phantomjs<2.0.0
+version = 1.9.7
 
 [python]
 recipe = zc.recipe.egg
-interpreter = python
 eggs = gp.recipe.phantomjs
-       nose
-       mock
+       pytest
