--- a/tox.ini
+++ b/tox.ini
@@ -1,38 +1,15 @@
 [tox]
-envlist=py27,py33
+envlist=py27,py33,py34
 
-[testenv:py26]
-basepython=python2.6
+[testenv]
+skipsdist=true
+skip_install=true
+whitelist_externals=
+    rm
 changedir={toxinidir}
 commands =
     rm -Rf .installed.cfg {envdir}/parts
-    {envbindir}/buildout buildout:parts-directory={envdir}/parts buildout:bin-directory={envbindir}
-    {envbindir}/nosetests
+    buildout buildout:parts-directory={envdir}/parts buildout:bin-directory={envbindir}
+    {envbindir}/py.test -sx tests/
 deps =
     zc.buildout
-    nose
-    mock
-
-[testenv:py27]
-basepython=python2.7
-changedir={toxinidir}
-commands =
-    rm -Rf .installed.cfg {envdir}/parts
-    {envbindir}/buildout buildout:parts-directory={envdir}/parts buildout:bin-directory={envbindir}
-    {envbindir}/nosetests
-deps =
-    zc.buildout
-    nose
-    mock
-
-[testenv:py34]
-basepython=python3.4
-changedir={toxinidir}
-commands =
-    rm -Rf .installed.cfg {envdir}/parts
-    {envbindir}/buildout buildout:parts-directory={envdir}/parts buildout:bin-directory={envbindir}
-    {envbindir}/nosetests
-deps =
-    zc.buildout
-    nose
-    mock
