--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: python
-python:
-  - "2.7"
-  - "2.6"
-  - "3.4"
-# command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
-install: python bootstrap.py; bin/buildout
-
-
-# command to run tests, e.g. python setup.py test
-script: ./bin/python setup.py test
+install:
+  - pip install tox
+script:
+  - tox
+env:
+  - TOXENV=py27
+  - TOXENV=py33
+  - TOXENV=py34
